# Metal-Dog-3

./: README.md  metal-dog.cabal
doc/: Design document (final).docx  Design document (initial).docx
src/: Config.hs  Controller.hs  Datatypes.hs  Enemy.hs  GameTypes.hs  GenericTypes.hs  Highscores.json  Main.hs  Model.hs  Parser.hs  Particle.hs  Player.hs  Projectile.hs  View.hs  Weapon.hs
