name:                metal-dog
version:             0.1.0.0
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable metal-dog
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       aeson,
                       strict-io,
                       bytestring,
                       text,
                       directory
  hs-source-dirs:      src
  default-language:    Haskell2010